# nix-templates

./: .gitignore  CHANGELOG.md  LICENSE  OpenCode.md  README.md  flake.nix
.github/: dependabot.yml
.github/workflows/: known_hosts  release.yml  test.sh  test.yml  todo.yml  update-flake-lock-inputs.yml  update-flake-lock.yml
agd/: .gitignore  flake.nix
agd/src/: Everything.agda  Main.agda  agd.agda-lib
ctl/: .gitignore  flake.nix
ctl-full/: .gitignore  flake.nix  index.html  index.js  package-lock.json  package.json  vite.config.js
ctl-full/ctl/: index.js  package-lock.json  package.json
ctl-full/src/: Main.purs
ctl-full/test/: Main.purs
ctl/src/: Main.purs
hask/: .gitignore  flake.nix  hask.cabal
haskell-nix/: flake.nix  hello.cabal
haskell-nix/nix/: hix.nix
hix/: flake.nix  hix.cabal
hix-plutus/: flake.nix  hix-plutus.cabal
hix-plutus/nix/: hix.nix
hix/nix/: hix.nix
hor/: .gitignore  flake.nix  hello.cabal  hor.cabal  overlay.nix
hor-plutus/: flake.nix  hello.cabal
iogx/: flake.nix  iogx.cabal
iogx-plutus/: cabal.project  flake.nix  iogx-plutus.cabal
iogx-plutus/nix/: project.nix
iogx-plutus/src/: Main.hs
iogx/nix/: outputs.nix  project.nix
iogx/src/: Main.hs
pix/: flake.nix
pix-ctl/: .gitignore  flake.nix
pix-ctl-full/: .gitignore  flake.nix  package-lock.json  package.json  webpack.config.js
pix-ctl-full/src/: Main.purs  Scripts.js  Scripts.purs
pix-ctl-full/test/: Main.purs
pix-purenix/: flake.nix
pix-purenix/src/: Main.purs
plutus/: cabal.project  flake.nix  hello.cabal
plutus/nix/: hix.nix  serve-docs.nix
plutus/src/: hello.hs
purs-nix/: flake.nix
