cabal-version: 3.8
-- [cabal-version] upgrade policy: as soon cabal supports it

-- Instructions on how to write this file are in the Cabal
-- documentation, which can be found here:
--   http://haskell.org/cabal/release/cabal-latest/doc/users-guide/

name: hix
version: 1.0.0.0

executable hix
  hs-source-dirs: src
  main-is: Main.hs
  build-depends: base
