cabal-version: 3.0

name: hello
version: 1.0.0.2

common lang
  ghc-options: -Wall 

executable hello
  import: lang
  hs-source-dirs: src
  main-is: hello.hs
  build-depends:
      base
    , bytestring
    , cardano-api
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , plutus-script-utils
    , serialise
