cabal-version: 3.8
-- [cabal-version] upgrade policy: as soon cabal-install supports it
name: iogx-plutus
version: 1.0.0.0

common lang
  ghc-options: -Wall 

executable iogx-plutus
  import: lang
  hs-source-dirs: src
  main-is: Main.hs
  build-depends:
      base
    , bytestring
    , cardano-api
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
